...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information_1">


    <Button
        android:id="@+id/buttonDec"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="-"
        android:textSize="16sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonInc" />

    <Button
        android:id="@+id/buttonInc"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
...
