...

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailCheck"
        app:layout_constraintBottom_toTopOf="@id/generatePasswordButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="24dp"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:id="@+id/passwordDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@id/generatePasswordButtonText"
        app:layout_constraintStart_toEndOf="@id/generatePasswordButtonText"
...
