<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/trendingthreats"
        android:title="TrendingThreats"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/Search"
        android:title="Search"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/Info"
        android:title="Information"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/WatchList"
        android:title="WatchList"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/sign_out"

        android:icon="@drawable/logout_img"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="Logout " />




</menu>